--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
     <h1 class="text-4xl font-bold mb-4">
       📱 BetPuan Mobil ile Her Yerden Hızlı Bahis Yap! ⚡
     </h1>
- <p class="text-lg leading-relaxed max-w-4xl mx-auto">
-  BetPuan, Türkiye’nin önde gelen <strong>✅ mobil bahis</strong> platformu olarak bir adım önde!  
-  🎰 <a href="https://puanbetgiris.com" class="underline font-semibold" target="_blank">Canlı Casino ve Slotlar</a> ile kazancı katla,  
-  🎁 <a href="https://betpuanuyelik.com" class="underline font-semibold" target="_blank">Üyelik Bonusu</a> ile hemen avantaj yakala,  
-  🔐 <a href="https://girisbetpuan.com" class="underline font-semibold" target="_blank">Güvenli Giriş</a> yaparak en yüksek oranlara eriş!  
-  🚀 BetPuan Mobil ile bahis ve casino artık cebinde!
+<p class="text-lg leading-relaxed max-w-4xl mx-auto">
+  BetPuan ile spor heyecanını ve casino keyfini aynı anda yaşayın. Özel bonuslar, yüksek limitler ve hızlı erişim ile her kullanıcıya premium oyun deneyimi sunuyoruz!  
+  ⚡ <a href="https://betpuan.co" class="underline font-semibold" target="_blank">hızlı bahis</a> ile anında oynayın,  
+  🎰 <a href="https://puanbetgiris.com" class="underline font-semibold" target="_blank">son bahis</a> ile kazanç fırsatlarını yakalayın,  
+  📱 <a href="https://betpuanmobil.com" class="underline font-semibold" target="_blank">mobil bahis</a> ile istediğiniz yerden erişim sağlayın,  
+  ✨ <a href="https://betpuanuyelik.com" class="underline font-semibold" target="_blank">bahis com</a> ile hızlı üyelik ve aktivasyon,  
+  🔐 <a href="https://girisbetpuan.com" class="underline font-semibold" target="_blank">nakit bahis</a> ile güvenli ödeme yapın,  
+  🎁 <a href="https://bonusbetpuan.com" class="underline font-semibold" target="_blank">deneme bonusu veren bahis siteleri</a> ile ekstra kazanç fırsatlarını kaçırmayın,  
+  🏆 <a href="https://betpuanguncelgiris.com" class="underline font-semibold" target="_blank">güvenilir bahis siteleri</a> ile her zaman premium oyun deneyimini yaşayın!
 </p>
     <a href="https://sshortly5.com/9ca3b2b" rel="nofollow" class="inline-block mt-8 px-10 py-3 bg-yellow-400 text-black font-bold text-xl rounded-full shadow-lg animate-pulse hover:bg-yellow-500 transition-all">
       🚀 BetPuan Mobil’e Hızlı Giriş Yap
