--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
   <meta name="keywords" content="mobil bahis, bahis siteleri, güvenilir bahis siteleri, canlı bahis, deneme bonusu, bahis casino, mobil giriş, yüksektir oranlar, betpuan mobil">
-  <title>🟢 BetPuan Mobil 🎯 Kolay Bahis ve Anında Kazanç 2025</title>
-  <link rel="canonical" href="https://ibetcasino.top" />
+  <title>BetPuan Mobil - BetPuan Kolay Bahis ve Anında Kazanç 2025</title>
+
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="http://domain.vsw.jp/ibetcasino.top">
+
+  <meta property="og:title" content="BetPuan Mobil - BetPuan Kolay Bahis ve Anında Kazanç 2025">
+  <meta property="og:description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
+  <meta property="og:url" content="http://domain.vsw.jp/ibetcasino.top">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="tr_TR">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="BetPuan Mobil - BetPuan Kolay Bahis ve Anında Kazanç 2025">
+  <meta name="twitter:description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
+
+  <meta name="googlebot" content="index, follow">
+  <meta name="bingbot" content="index, follow">
+
+  <link rel="alternate" hreflang="tr" href="https://ibetcasino.top/">
+  <link rel="alternate" hreflang="x-default" href="https://ibetcasino.top/">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="https://www.google.com/s2/favicons?domain=ibetcasino.top&sz=32">
+  <link rel="icon" type="image/png" sizes="64x64" href="https://www.google.com/s2/favicons?domain=ibetcasino.top&sz=64">
+  <link rel="icon" type="image/png" sizes="128x128" href="https://www.google.com/s2/favicons?domain=ibetcasino.top&sz=128">
+  <link rel="icon" type="image/png" sizes="256x256" href="https://www.google.com/s2/favicons?domain=ibetcasino.top&sz=256">
+  <link rel="apple-touch-icon" href="https://www.google.com/s2/favicons?domain=ibetcasino.top&sz=256">
+  <link rel="shortcut icon" href="https://www.google.com/s2/favicons?domain=ibetcasino.top&sz=192">
+
+  <meta name="apple-mobile-web-app-title" content="BetPuan Mobil 2025">
+  <link rel="manifest" href="https://ibetcasino.top/site.webmanifest">
+
+  <meta property="og:site_name" content="BetPuan Mobil Giriş">
+  <meta name="author" content="BetPuan - Mobil Bahis Platformu" />
   
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
