--- a/index.html
+++ b/index.html
@@ -40,6 +40,101 @@
 
   <meta property="og:site_name" content="BetPuan Mobil Giriş">
   <meta name="author" content="BetPuan - Mobil Bahis Platformu" />
+
+    <!-- ORGANIZATION -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Betpuan",
+  "url": "http://domain.vsw.jp/ibetcasino.top/",
+  "logo": "https://raw.githubusercontent.com/betseogalaxi/m/main/betpuan-logo.png",
+  "sameAs": [
+    "https://ibetcasino.top/gir",
+    "https://twitter.com/betpuan",
+    "https://instagram.com/betpuan",
+    "https://t.me/betpuan"
+  ]
+}
+</script>
+
+<!-- BREADCRUMB LIST -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "item": {
+        "@type": "WebPage",
+        "@id": "/",
+        "name": "BetPuan"
+      }
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "item": {
+        "@type": "WebPage",
+        "@id": "/Betpuan",
+        "name": "BetPuan Yeni Giriş"
+      }
+    }
+  ]
+}
+</script>
+
+<!-- FAQ -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "Betpaun'a giriş yaparken neden otomatik yönlendirme olabilir?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Betpaun, yoğun sunucu trafiği veya gecikme durumlarında kullanıcıyı daha hızlı bir alternatif bağlantıya yönlendirir."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Betpaun güncel giriş adresi neden zaman zaman değişiyor?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Erişim kısıtlamaları, bakım işlemleri ve sistem iyileştirmeleri nedeniyle giriş linkleri periyodik olarak güncellenir."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Bağlantılar güncel mi?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Evet. Bu sayfadaki butonlar düzenli kontrol edilir ve yalnızca doğrulanmış Betpuan bağlantıları yayınlanır."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Mobil uygulama gerekiyor mu?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Gerekmez. iOS/Android tarayıcınızdan doğrudan giriş yapabilirsiniz."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Kimlik doğrulaması ne zaman istenir?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Para çekimi ve güvenlik kontrollerinde talep edilebilir; adımlar ekranda açıklanır."
+      }
+    }
+  ]
+}
+</script>
   
 </head>
 <body class="bg-[#3E4967] text-white font-sans">
