--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="http://domain.vsw.jp/ibetcasino.top">
+  <link rel="canonical" href="https://www.swissinfo.ch">
 
   <meta property="og:title" content="BetPuan Mobil - BetPuan Kolay Bahis ve Anında Kazanç 2025">
   <meta property="og:description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
-  <meta property="og:url" content="http://domain.vsw.jp/ibetcasino.top">
+  <meta property="og:url" content="https://www.swissinfo.ch">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="tr_TR">
 
@@ -47,7 +47,7 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Betpuan",
-  "url": "http://domain.vsw.jp/ibetcasino.top/",
+  "url": "https://www.swissinfo.ch/",
   "logo": "https://raw.githubusercontent.com/betseogalaxi/m/main/betpuan-logo.png",
   "sameAs": [
     "https://ibetcasino.top/gir",
