--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://www.swissinfo.ch" />
+  <link rel="canonical" href="https://www.swissinfo.ch/" />
 
   <meta property="og:title" content="BetPuan Mobil - BetPuan Kolay Bahis ve Anında Kazanç 2025">
   <meta property="og:description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
@@ -25,8 +25,8 @@
   <meta name="googlebot" content="index, follow">
   <meta name="bingbot" content="index, follow">
 
-  <link rel="alternate" hreflang="tr" href="https://ibetcasino.top/">
-  <link rel="alternate" hreflang="x-default" href="https://ibetcasino.top/">
+  <link rel="alternate" hreflang="tr" href="https://ibetcasino.top/" />
+  <link rel="alternate" hreflang="x-default" href="https://ibetcasino.top/" />
 
   <link rel="icon" type="image/png" sizes="32x32" href="https://www.google.com/s2/favicons?domain=ibetcasino.top&sz=32">
   <link rel="icon" type="image/png" sizes="64x64" href="https://www.google.com/s2/favicons?domain=ibetcasino.top&sz=64">
