--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
   <meta name="keywords" content="mobil bahis, bahis siteleri, güvenilir bahis siteleri, canlı bahis, deneme bonusu, bahis casino, mobil giriş, yüksektir oranlar, betpuan mobil">
-  <title>BetPuan Mobil - BetPuan Kolay Bahis ve Anında Kazanç 2025</title>
+  <title>BetPuan Mobil 821 - BetPuan Kolay Bahis ve Anında Bonus 2025</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
 
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://www.swissinfo.ch/" />
+  <link rel="canonical" href="https://indepest.com/about/" />
 
   <meta property="og:title" content="BetPuan Mobil - BetPuan Kolay Bahis ve Anında Kazanç 2025">
   <meta property="og:description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
-  <meta property="og:url" content="https://www.swissinfo.ch">
+  <meta property="og:url" content="https://indepest.com/about">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="tr_TR">
 
@@ -47,7 +47,7 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Betpuan",
-  "url": "https://www.swissinfo.ch/",
+  "url": "https://indepest.com/about/",
   "logo": "https://raw.githubusercontent.com/betseogalaxi/m/main/betpuan-logo.png",
   "sameAs": [
     "https://ibetcasino.top/gir",
