--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
   <meta name="keywords" content="mobil bahis, bahis siteleri, güvenilir bahis siteleri, canlı bahis, deneme bonusu, bahis casino, mobil giriş, yüksektir oranlar, betpuan mobil">
-  <title>BetPuan Mobil 821 - BetPuan Kolay Bahis ve Anında Bonus 2025</title>
+  <title>Kripto Kabul Eden Casino Siteleri – 2025 Tavsiyeleri/title>
 
   <script src="https://cdn.tailwindcss.com"></script>
 
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://indepest.com/about/" />
 
-  <meta property="og:title" content="BetPuan Mobil - BetPuan Kolay Bahis ve Anında Kazanç 2025">
+  <meta property="og:title" content="Kripto Kabul Eden Casino Siteleri – 2025 Tavsiyeleri">
   <meta property="og:description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
   <meta property="og:url" content="https://indepest.com/about">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="tr_TR">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="BetPuan Mobil - BetPuan Kolay Bahis ve Anında Kazanç 2025">
+  <meta name="twitter:title" content="Kripto Kabul Eden Casino Siteleri – 2025 Tavsiyeleri">
   <meta name="twitter:description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
 
   <meta name="googlebot" content="index, follow">
@@ -35,10 +35,10 @@
   <link rel="apple-touch-icon" href="https://www.google.com/s2/favicons?domain=ibetcasino.top&sz=256">
   <link rel="shortcut icon" href="https://www.google.com/s2/favicons?domain=ibetcasino.top&sz=192">
 
-  <meta name="apple-mobile-web-app-title" content="BetPuan Mobil 2025">
+  <meta name="apple-mobile-web-app-title" content="Kripto Kabul Eden Casino Siteleri – 2025 Tavsiyeleri">
   <link rel="manifest" href="https://ibetcasino.top/site.webmanifest">
 
-  <meta property="og:site_name" content="BetPuan Mobil Giriş">
+  <meta property="og:site_name" content="Kripto Kabul Eden Casino Siteleri – 2025 Tavsiyeleri">
   <meta name="author" content="BetPuan - Mobil Bahis Platformu" />
 
     <!-- ORGANIZATION -->
