--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="BetPuan mobil giriş ile ücretsiz bahis, deneme bonusu ve yüksek oran fırsatlarına hızlıca eriş. Kazanmanın en kolay yolu BetPuan’da!">
   <meta name="keywords" content="mobil bahis, bahis siteleri, güvenilir bahis siteleri, canlı bahis, deneme bonusu, bahis casino, mobil giriş, yüksektir oranlar, betpuan mobil">
-  <title>Kripto Kabul Eden Casino Siteleri – 2025 Tavsiyeleri/title>
+  <title>Kripto Kabul Eden Casino Siteleri – 2025 Tavsiyeleri</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
 
